package usantatecla.tictactoe.views.interfaces;

public interface IResumeView {
    public boolean getResume();
}
